[project]
name = "production-control"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex",email = "azhidenko13@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "celery[redis] (>=5.5.0,<6.0.0)",
    "redis (>=5.0.0,<6.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "minio (>=7.2.20,<8.0.0)",
    "python-multipart (>=0.0.28,<0.0.29)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
